Updating existing classes